--- a/episodes/0/0.md
+++ b/episodes/0/0.md
@@ -1472,15 +1472,21 @@ nixpkgs = builtins.fetchTarball "https://github.com/NixOS/nixpkgs/archive/master
 timestamp
 
 Generally not recommended, because this changes over time, generally you want to use pure fetchers, but yeah,
-so nix packages, we can look at this, we can evaluate this `nix-instantiate --eval`:
+so nix packages, we can look at this, we can evaluate this:
 
 ```nix
--- ...
-  nixpkgs = builtins.fetchTarball "https://github.com/NixOS/nixpkgs/archive/master.tar.gz";
-in nixpkgs
+❯ nix-instantiate --eval
+unpacking 'https://github.com/NixOS/nixpkgs/archive/master.tar.gz' into the Git cache...
+"/nix/store/vchaic38j70l7g1cw1dgqbf456r3xjxr-source"
 ```
 
-Okay, and this gives us a directory, that was really fast actually, uh, `nix-instantiate --eval --read-write-mode`,
+Okay, and this gives us a directory, that was really fast actually, uh:
+
+```nix
+❯ nix-instantiate --eval --read-write-mode
+"/nix/store/vchaic38j70l7g1cw1dgqbf456r3xjxr-source"
+```
+
 oh that still worked, interesting. Anyway so we can, once we have a path to nixpkgs, that actually, you can 
 also provide a local path actually, we didn't look at paths yet, but you can also do, if you have a local
 clone, you can just like:
@@ -1497,6 +1503,8 @@ in your project, that's still works with flakes, so if we had like a nixpkgs clo
 ```nix
 nixpkgs' = ./nixpkgs;
 ```
+
+timestamp
 
 And so once we have nixpkgs we need to import it so we can use all the packages, that's done with import:
 
