--- a/episodes/0/0.md
+++ b/episodes/0/0.md
@@ -1469,8 +1469,6 @@ I'm gonna go to nix packages, like get a tarball for that, actually let's just u
 nixpkgs = builtins.fetchTarball "https://github.com/NixOS/nixpkgs/archive/master.tar.gz";
 ```
 
-timestamp
-
 Generally not recommended, because this changes over time, generally you want to use pure fetchers, but yeah,
 so nix packages, we can look at this, we can evaluate this:
 
@@ -1498,13 +1496,11 @@ nixpkgs' = ~/src/nixpkgs;
 That's where my local clone lives. Paths are also interesting, we should look at paths but maybe not for now. So you can
 reference local paths with flakes and you won't be able to anymore, uh, because this is to some degree impure,
 because you can access anything here, but for now it's in the nix language. So you can also access like local paths
-in your project, that's still works with flakes, so if we had like a nixpkgs clone locally we could do that
+in your project, that still works with flakes, so if we had like a nixpkgs clone locally we could do that
 
 ```nix
 nixpkgs' = ./nixpkgs;
 ```
-
-timestamp
 
 And so once we have nixpkgs we need to import it so we can use all the packages, that's done with import:
 
@@ -1519,7 +1515,7 @@ import nixpkgs like this:
 pkgs = import nixpkgs;
 ```
 
-By default, if it's a directory, it uses default.nix file, so in nixpkgs in the root directory there is a
+By default, if it's a directory, it uses `default.nix` file, so in nixpkgs in the root directory there is a
 `default.nix` file and that is the entry point of nixpkgs. We can also manually provide this with:
 
 ```nix
@@ -1538,17 +1534,23 @@ in pkgs
 And evaluate this, we would get a lambda:
 
 ```nix
-:!nix-instantiate --eval
+❯ nix-instantiate --eval
+unpacking 'https://github.com/NixOS/nixpkgs/archive/master.tar.gz' into the Git cache...
 <LAMBDA>
 ```
 
 Which is just another name for a function, and so the root of nixpkgs is a function, and if we want to
-actually access the packages we need to give an argument, and that's generally, that's always an attribute
-set, so we can use currying here, so this is just like this:
+actually access the packages we need to give an argument:
+
+```nix
+pkgs = import nixpkgs {};
+```
+
+and that's generally, that's always an attribute set, so we can use currying here,
+so this is just like this:
 
 ```nix
   pkgs = (import nixpkgs) {};
-in pkgs
 ```
 
 But these aren't needed so if we do that we do get access to the set:
@@ -1558,32 +1560,95 @@ But these aren't needed so if we do that we do get access to the set:
 in pkgs
 ```
 
-(`nix-instantiate --eval` returns all nix packages). So these are all the packages in nixpkgs as a single
-attribute set containing all of them. All the packages, and all the package builders as well. Now in this
-attribute set you can provide some other options, some common ones are `overlays =`, with overlays you
-can customize packages and nix packages a bit. I like to personally override this to an empty set,
-(`overlays = [];`) because by default it reads from like `~/.config/nixpkgs/overlays` or something like that,
-which is kind of impure and sometimes messes with packages in weird ways. Another thing `config =` is by
-default read from some impure location so I like to also override this to the empty set, `config = {};`,
-and then one of the most common ones for flakes you'll see is `system =`, that's the system type, the
-packages are specific to linux or darwin or something, and so I provide this here, `system = "x86_64-linux";`.
-You can also, this doesn't work in flakes, but in non-flake nix you can give `builtins.currentSystem`, and it just
+```nix
+> nix-instantiate --eval
+# ...
+= <CODE>; zthrottle = <CODE>; zug = <CODE>; zuki-themes = <CODE>; zulip = <CODE>; zulip-term = <CODE>; zulu = <CODE>; zulu11 = <CODE>; zulu17 = <CODE>; zulu21 = <CODE>; zulu23 = <CODE>; zulu8 = <CODE>; zunclient = <CODE>; zunit = <CODE>; zuo = <CODE>; zutty = <CODE>; zvbi = <CODE>; zwave-js-server = <CODE>; zx = <CODE>; zxcvbn-c = <CODE>; zxfer = <CODE>; zxing = <CODE>; zxing-cpp = <CODE>; zxpy = <CODE>; zxtune = <CODE>; zydis = <CODE>; zyn-fusion = <CODE>; zynaddsubfx = <CODE>; zynaddsubfx-fltk = <CODE>; zynaddsubfx-ntk = <CODE>; zz = <CODE>; zziplib = <CODE>; zzuf = <CODE>; }
+```
+
+So these are all the packages in nixpkgs as a single attribute set containing all of them. 
+All the packages, and all the package builders as well. Now in this attribute set you 
+can provide some other options, some common ones are overlays:
+
+```nix
+pkgs = import nixpkgs {
+  overlays =
+};
+```
+
+With overlays you can customize packages and nix packages a bit. I like to personally 
+override this to an empty set, (`overlays = [];`) because by default it reads from like
+`~/.config/nixpkgs/overlays` or something like that, which is kind of impure and 
+sometimes messes with packages in weird ways. 
+
+Another thing `config =` is by default read from some impure location so I like
+to also override this to the empty set, `config = {};`, and then one of the most 
+common ones for flakes you'll see is `system =`, that's the system type, the
+packages are specific to linux or darwin or something, and so I provide this here,
+`system = "x86_64-linux";`. You can also, this doesn't work in flakes, 
+but in non-flake nix you can give `builtins.currentSystem`, and it just
 points to your current system, (`system = builtins.currentSystem`).
 
 ```nix
-overlays = []; # Because by default ~/.config/nixpkgs/overlays
-config = {}; # Because by default ~/.config/nixpkgs/config.nix
-system = "x86_64-linux";
-# system = builtins.currentSystem
+pkgs = import nixpkgs {
+  overlays = []; # Because by default ~/.config/nixpkgs/overlays
+  config = {}; # Because by default ~/.config/nixpkgs/config.nix
+  system = "x86_64-linux";
+  # system = builtins.currentSystem
+};
 ```
 
-And so in here we can for example say, give me the hello package, `in pkgs.hello`, if we now use `nix-build`, 
-nix build hello, it will substitute hello in 99 percent of, or hello hopefully always but some packages aren't always
+And so in here we can for example say, give me the hello package:
+
+```nix
+# ...
+  pkgs = import nixpkgs {
+    overlays = []; # Because by default ~/.config/nixpkgs/overlays
+    config = {}; # Because by default ~/.config/nixpkgs/config.nix
+    system = "x86_64-linux";
+    # system = builtins.currentSystem
+  };
+
+in pkgs.hello
+```
+
+if we now use `nix-build` hello:
+
+```nix
+❯ nix-build
+/nix/store/a7hnr9dcmx3qkkn8a20g7md1wya5zc9l-hello-2.12.1
+```
+
+it will substitute hello in 99 percent of, or hello hopefully always but some packages aren't always
 built by hydra. Hydra is the CI system for nix packages and you have the cache installed by default, so
 you won't have to fetch in many cases. Right and now we have hello here, if we build hello, get the result
-symlink pointing to hello and here we can then inspect the result and see that it has a hello binary and
-we can execute this locally here `result/bin/hello`. But yeah, but how to actually build a derivation generally,
-so you use the derivation builders in nixpkgs. So let's say I want to package something in in some c package:
+symlink pointing to hello and here we can then inspect the result:
+
+```nix
+❯ tree result
+result
+├── bin
+│   └── hello
+└── share
+    ├── info
+    │   └── hello.info
+    ├── locale
+    │   ├── ast
+    │   │   └── LC_MESSAGES
+    │   │       └── hello.mo
+# ...
+```
+
+and see that it has a hello binary and we can execute this locally here:
+
+```nix
+❯ result/bin/hello
+Hello, world!
+```
+
+But yeah, but how to actually build a derivation generally,
+so you use the derivation builders in nixpkgs. So let's say I want to package something
+in in some c package:
 
 ```nix
 someCPackage = 
@@ -1615,6 +1680,7 @@ let
   };
 in someCPackage
 ```
+timestamp 46.43
 
 ```nix
 nix-build
