0th nix-build makefile

--- a/episodes/0/0.md
+++ b/episodes/0/0.md
@@ -1669,45 +1669,62 @@ someCPackage = pkgs.stdenv.mkDerivation {
 };
 ```
 
-That's the most used by far builder for packages, and so let's try just with this to see what would fail if
-we didn't provide any arguments:
+That's the most used by far builder for packages, and so let's try just with this 
+to see what would fail if we didn't provide any arguments:
 
 ```nix
-let 
-    nixpkgs = builtins.fetchTarball "https://github.com/NixOS/nixpkgs/archive/master.tar.gz";
-    pkgs = import nixpkgs {};
-    someCPackage = pkgs.stdenv.mkDerivation {
+  someCPackage = pkgs.stdenv.mkDerivation {
+
   };
+
 in someCPackage
 ```
-timestamp 46.43
 
 ```nix
-nix-build
+❯ nix-build
+unpacking 'https://github.com/NixOS/nixpkgs/archive/master.tar.gz' into the Git cache...
 error: derivation name missing
 ```
 
-Derivation name missing, we also had that before, `name = "someCPackage";`, all right, now we got an error that
-we don't have a source. And so one of the, one of the main arguments here is a source, let's for source maybe pick
-`src = ./src;` and let's actually create this directory, `mkdir src`, let's also do like `echo foo > src/foo`, all
-right, so we have at least a foo in there, so with a source, so by default, oh actually makefile might be good, so
-by default it calls make, and the structure into phases, that's kind of the abstraction that mkDerivation provides,
-so if we were to just run it like this we get an error no makefile doing nothing:
+Derivation name missing, we also had that before, `name = "someCPackage";`:
 
 ```nix
-let 
-    nixpkgs = builtins.fetchTarball "https://github.com/NixOS/nixpkgs/archive/master.tar.gz";
-    pkgs = import nixpkgs {};
-    someCPackage = pkgs.stdenv.mkDerivation {
-      name = "someCPackage";
-      src = ./src
-  };
-in someCPackage
+❯ nix-build
+this derivation will be built:
+  /nix/store/fpphzib1sgszk96gkl3sbx49mzdn1q5n-someCPackage.drv
+building '/nix/store/fpphzib1sgszk96gkl3sbx49mzdn1q5n-someCPackage.drv'...
+Running phase: unpackPhase
+variable $src or $srcs should point to the source
+error: builder for '/nix/store/fpphzib1sgszk96gkl3sbx49mzdn1q5n-someCPackage.drv' failed with exit code 1;
+       last 2 log lines:
+       > Running phase: unpackPhase
+       > variable $src or $srcs should point to the source
+       For full logs, run 'nix log /nix/store/fpphzib1sgszk96gkl3sbx49mzdn1q5n-someCPackage.drv'.
 ```
 
+all right, now we got an error that we don't have a source. And so one of the,
+one of the main arguments here is a `src = `, let's for source maybe pick
+`src = ./src;` and let's actually create this directory:
+
+```bash
+mkdir src
+```
+
+let's also do like:
+
+```bash
+echo foo > src/foo
+```
+
+All right, so we have at least a foo in there, so with a source, so by default,
+oh actually makefile might be good, so by default it calls make, you have, and
+the structure into phases, that's kind of the abstraction that mkDerivation 
+provides, so if we were to just run it like this we get an error:
+
 ```nix
--- transcriber note: currently (12/24) the error looks a bit different
---...
+❯ nix-build
+this derivation will be built:
+  /nix/store/2fmgxgn6zsn9yj991g75wm7vvml4aq5j-someCPackage.drv
 building '/nix/store/2fmgxgn6zsn9yj991g75wm7vvml4aq5j-someCPackage.drv'...
 Running phase: unpackPhase
 unpacking source archive /nix/store/zdm7f0wq0i88vhppqc9xly6bf0r1i6f3-src
@@ -1723,6 +1740,11 @@ no Makefile or custom installPhase, doing nothing
 Running phase: fixupPhase
 error: builder for '/nix/store/2fmgxgn6zsn9yj991g75wm7vvml4aq5j-someCPackage.drv' failed to produce output path for output 'out' at '/nix/store/2fmgxgn6zsn9yj991g75wm7vvml4aq5j-someCPackage.drv.chroot/root/nix/store/0w7rp9prqlaf6dyqwq641058kj1ddjr5-someCPackage'
 ```
+
+no makefile doing nothing, `> make: *** No rule to make target 'install'. Stop.`
+
+> Note: This part in the error is missing from the current way to build this as
+it can be seen from above
 
 So by default, for like make file, `vim makefile`, then have like a, `default:` which does something like `echo foo`, or move foo
 to out, `mv foo $out`, well then it's like like see makefile syntax, then an install phase, although that's actually
