--- a/episodes/0/0.md
+++ b/episodes/0/0.md
@@ -1746,9 +1746,17 @@ no makefile doing nothing, `> make: *** No rule to make target 'install'. Stop.`
 > Note: This part in the error is missing from the current way to build this as
 it can be seen from above
 
-So by default, for like make file, `vim makefile`, then have like a, `default:` which does something like `echo foo`, or move foo
-to out, `mv foo $out`, well then it's like like see makefile syntax, then an install phase, although that's actually
-the install phase:
+So by default,
+
+```bash
+cd src
+vim Makefile
+```
+
+for like make file, `vim Makefile`, then have like a, `default:`
+which does something like `echo foo`, or move foo to out, `mv foo $out`,
+well then it's like like see makefile syntax, then an install phase, although 
+that's actually the install phase:
 
 ```make
 default:
@@ -1758,14 +1766,28 @@ install:
   mv foo $(out)
 ```
 
-So this, very basic makefile, let's see if it works, `nix-build`, okay it works. So now we have a result, `cat result/foo`,
-which contains `foo bar`, and so what this does underneath, it has a phases array, (`# phases: `), which gives
-things like upack phase, (`[ unpackPhase`), you have patch phase, (`[ unpackPhase patchPhase configurePhase buildPhase
-installPhase fixupPhase ]`) and probably some more I forgot about, but these are run in order and do various things,
-so `unpackPhase` takes the source here, (`src = ./src`), unpacks it if necessary, say if you were to have provided a
-zip file or something it would unpack that zipfile into the local directory in the build.
+So this, very basic makefile, let's see if it works, `nix-build`, okay it works.
 
-`patchPhase`, you can provide `patches = [ ];` array of `.patch` files:
+> Note: Makefiles require real tabs (ASCII 09), not spaces, for indentation.
+If you're getting a "missing separator". One can install vim or nano and correct
+it or use other options.
+
+So now we have a result:
+
+```bash
+❯ cat result/foo
+foo
+bar
+```
+
+Which contains `foo` and `bar`, and so what this does underneath, it has a phases array,
+(`# phases: `), which gives things like upack phase, (`[ unpackPhase`), you have patch phase,
+(`[ unpackPhase patchPhase configurePhase buildPhase installPhase fixupPhase ]`)
+and probably some more I forgot about, but these are run in order and do various things,
+so `unpackPhase` takes the source here, (`src = ./src`), unpacks it if necessary,
+say if you were to have provided a zip file or something it would unpack that zipfile
+into the local directory in the build. `patchPhase`, you can provide `patches = [ ];`
+array of `.patch` files:
 
 ```nix
 patches = [
@@ -1773,8 +1795,8 @@ patches = [
 ];
 ```
 
-A very easy way to apply patches to the source. Then `configurePhase` by default calls `./configure`, kind of the
-default in the C world:
+A very easy way to apply patches to the source. Then `configurePhase` by default
+calls `./configure`, kind of the default in the C world:
 
 ```nix
 # configurePhase by default calls ./configure 
@@ -1782,10 +1804,12 @@ default in the C world:
 # installPhase by default calls `make install`
 ```
 
-And then `fixUp` phase like some binary fixup thing does some binary patching magic..? (smiles). And so that's really
-the abstraction that `mkDerivation` provides, and that's, it's generally useful, you can customize it in some ways,
-so you can, all of these phases have pre and post hooks, so you can say if you want to like customize the configure phase,
-and run something before the `./configure` runs you can say `preConfigure` and then a bash script here:
+And then `fixUp` phase like some binary fixup thing does some binary patching magic..?
+(smiles). And so that's really the abstraction that `mkDerivation` provides, and that's,
+it's generally useful, you can customize it in some ways, so you can,
+all of these phases have pre and post hooks, so you can say if you want to like
+customize the configure phase, and run something before the `./configure` runs
+you can say `preConfigure =` and then a bash script here:
 
 ```nix
 preConfigure = ''
@@ -1793,10 +1817,12 @@ preConfigure = ''
 '';
 ```
 
-Then you also have `postConfigure` for after the configure, you have the same for `buildPhase` and `installPhase`,
-for all the phases, `preBuild` and `postBuild` and so on. And so yeah, generally you use this kind of thing
-to build packages. Now this is the most generic builder, there's more specific ones in nixpkgs. We're running out of time,
-but then there's also for all the languages there are separate builders, so there's:
+Then you also have `postConfigure` for after the configure, you have the same for
+`buildPhase` and `installPhase`, for all the phases, `preBuild` and `postBuild`
+and so on. And so yeah, generally you use this kind of thing to build packages.
+Now this is the most generic builder, there's more specific ones in nixpkgs. 
+We're running out of time, but then there's also for all the languages
+there are separate builders, so there's:
 
 ```nix
 # pkgs.pythonPackages.buildPythonPackage
@@ -1804,7 +1830,8 @@ but then there's also for all the languages there are separate builders, so ther
 # pkgs.haskellPackages.mkDerivation
 ```
 
-There's all kinds of builders that produce derivations and pick functions and have their own abstractions, things like that.
+There's all kinds of builders that produce derivations and pick functions and
+have their own abstractions, things like that.
 
 Matthew H: At least the naming is consistent. (laughs)
 
@@ -1812,10 +1839,12 @@ Silvan: (laughs) Yes, let's pretend it is.
 
 SomeoneElse: Problems in computer science.. (everyone laughing)
 
-Silvan: All right but yeah, that's like, I think fairly basic nix tutorial, what do you think, do you, did you get most of that,
+Silvan: All right but yeah, that's like, I think fairly basic nix tutorial,
+what do you think, do you, did you get most of that,
 
-Matthew H: I think I got a lot of it, I think I'm gonna have to go back and read over the source, the back half, the derivations,
-up to sort of making custom derivations, I'll need a bit of refresh on that, but that was a really interesting introduction,
-yeah, thank you so much.
+Matthew H: I think I got a lot of it, I think I'm gonna have to go back and read
+over the source, the back half, the derivations, up to sort of making custom
+derivations, I'll need a bit of refresh on that, but that was a really interesting
+introduction, yeah, thank you so much.
 
 
