2nd trying to figure out why overriding the hash doesn't work

--- a/episodes/2/2.md
+++ b/episodes/2/2.md
@@ -689,10 +689,207 @@ nix-repl> lib.functionArgs hello.src.overrideAttrs
 { }
 ```
 
-Ah, that doesn't work. See, I would have liked to see what kind of things we can override but I don't think that's supported.
-We can look at the implementation of `fetchurl` though to see things it does.
+Ah, that doesn't work. See, I would have liked to see what kind of things we can
+override but I don't think that's supported. We can look at the implementation of
+`fetchurl` though to see things it does.
 
 Yuriy Taraday: We could try.
 
-14.22
+Silvan: Try the sha?
+
+Yuriy: Yeah, just override the sha with some..
+
+```nix
+> fetchurl/default.nix
+
+# ...
+
+  # SRI hash.
+  hash ? "",
+
+  # Legacy ways of specifying the hash.
+  outputHash ? "",
+  outputHashAlgo ? "",
+  sha1 ? "",
+  sha256 ? "",
+  sha512 ? "",
+
+  recursiveHash ? false,
+# ...
+```
+
+Silvan: Yeah it does have this here, well it might just work, let's try it. If
+it does work we should get an error because we this source here shouldn't really
+exist like `something-that-doesn't-exist`:
+
+```nix
+let 
+  pkgs = import <nixpkgs> {
+    overlays = [
+      (final: prev: {
+        hello = (prev.hello.override {
+          #fetchurl = throw "not fetchurl";
+        }).overrideAttrs (finalAttrs: {
+          version = "something-that-doesn't-exist";
+          src = final.fetchurl {
+            url = finalAttrs.src.url;
+            hash = "sha256-jzkukv2sv28wsm18tcqnxoczmlxdyh2idh9rlibh2ya=";
+          };
+
+          nativebuildinputs = (finalAttrs.nativebuildinputs or []) ++ [
+            final.jq
+          ];
+        });
+      })
+    ];
+  };
+in pkgs.hello
+```
+
+All right, let's try this, let me comment this out, because this would also be a
+way of doing it:
+
+```nix
+#src = final.fetchurl {
+#url = finalAttrs.src.url;
+#hash = "sha256-jzkukv2sv28wsm18tcqnxoczmlxdyh2idh9rlibh2ya=";
+#};
+```
+
+So let's look at `finalAttrs`:
+
+
+```nix
+#src = final.fetchurl {
+#url = finalAttrs.src.url;
+#hash = "sha256-jzkukv2sv28wsm18tcqnxoczmlxdyh2idh9rlibh2ya=";
+#};
+src = finalAttrs.src.overrideAttrs (finalAttrs': {
+
+});
+```
+
+I'm used to calling it old, now this is a bit confusing because we now have two
+`finalAttrs`, let me prime one of those, so we are gonna call this `sha256 =` and
+here I'm gonna ad this:
+
+```nix
+src = finalAttrs.src.overrideAttrs (finalAttrs': {
+  sha256 = "sha256-jzkukv2sv28wsm18tcqnxoczmlxdyh2idh9rlibh2ya=";
+});
+```
+
+Yuriy: Let's change it to something random so that it doesn't clash.
+
+Silvan: Yeah, let me do this:
+
+```nix
+src = finalAttrs.src.overrideAttrs (finalAttrs': {
+  sha256 = "0000000000000000000000000000000000000000000000000000";
+});
+```
+
+By the way, this is in vim, you can press 52 `i` zero then it inserts string of
+that length with just zeros.
+
+> Note: after zero press ESC to actually generate the string of numbers
+
+Alexander Sosedkin: I think an empty string is also all zeros or even something..
+
+Silvan: Oh yeah, yeah
+
+Alexander Sosedkin: So, not that useful (chuckles)
+
+Silvan: Yeah, good point. This didn't exist until recently I believe, nowadays you
+don't need to do this anymore, thanks. So let's try this out again:
+
+```nix
+> nix-build test6.nix
+
+building '/nix/store/dxgq953j7v1slncr3r54949jhcwsff0r-hello-something-that-doesn-t-exist.tar.gz.drv'...
+
+trying https://ftpmirror.gnu.org/hello/hello-something-that-doesn't-exist.tar.gz
+  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current
+                                 Dload  Upload   Total   Spent    Left  Speed
+  0     0    0     0    0     0      0      0 --:--:--  0:00:01 --:--:--     0
+  0     0    0     0    0     0      0      0 --:--:--  0:00:01 --:--:--     0
+curl: (22) The requested URL returned error: 404
+```
+
+Yeah, we can see that it tries to fetch it here..
+
+Yuriy: Let's try for example, ...does it match what we have now but it exists.
+
+Silvan: `2.12` is the current version.
+
+Yuriy: `2.12.1` is current version, `2.12` is previous one so..
+
+Silvan: Ah, I see
+
+Yuriy: Why did it fail?
+
+Silvan: It didn't fail
+
+```nix
+> ne -A hello.version
+"2.12.1"
+```
+
+Yuriy: Maybe because of empty sha it didn't check it or something.
+
+Alexander Sosedkin: No, it because it wasn't (operating?) I believe (17.01)
+
+Silvan: Alexander you asked a question?
+
+Alexander Sosedkin: I thought that is an indicator that the override didn't work,
+the idea of overrideAttrs
+
+Silvan: Yeah..
+
+Alexander Sosedkin: We can try with a lot of zeros to double check.
+
+Silvan: Yeah, that's a good point. I'll do this again to 12: `version = "2.12"`,
+All right let me try this:
+
+```nix
+❯ nix-build test6.nix
+these 2 derivations will be built:
+  /nix/store/nbsibiddcvm33a6lzb7rlqci1z3051vv-hello-2.12.tar.gz.drv
+  /nix/store/zk3318ngmmx1p6fg8yh4vfvxwjwkwibp-hello-2.12.drv
+building '/nix/store/nbsibiddcvm33a6lzb7rlqci1z3051vv-hello-2.12.tar.gz.drv'...
+
+trying https://ftpmirror.gnu.org/hello/hello-2.12.tar.gz
+  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current
+                                 Dload  Upload   Total   Spent    Left  Speed
+  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0
+100  993k  100  993k    0     0   345k      0  0:00:02  0:00:02 --:--:--  640k
+error: hash mismatch in fixed-output derivation '/nix/store/nbsibiddcvm33a6lzb7rlqci1z3051vv-hello-2.12.tar.gz.drv':
+         specified: sha256-jZkUKv2SV28wsM18tCqNxoCZmLxdYH2Idh9RLibH2yA=
+            got:    sha256-zwSvhtwIUmjF9EcPuuSbGK+8Iht4CWqrhC2TSna60Ks=
+error: 1 dependencies of derivation '/nix/store/zk3318ngmmx1p6fg8yh4vfvxwjwkwibp-hello-2.12.drv' failed to build
+```
+
+Soham Chowdhury: What is `ne`?
+
+Silvan: Oh yeah, `> alias ne`, that's a local alias I have for just `nix-instantiate --eval`,
+so `alias nb` for `nix-build` and `alias ns` for `nix-shell`. I'm using them all
+the time so I want them to be short. I'm not exactly why this doesn't work right
+now.
+
+Yuriy: Maybe let's check in repl whether or not
+
+Silvan: Yeah
+
+```nix
+nix repl
+
+nix-repl> hello = import ./test6.nix
+```
+
+Soham Chowdhury
+
+18.11 timestamp
+
+
+
 
