2nd overriding output hash

--- a/episodes/2/2.md
+++ b/episodes/2/2.md
@@ -886,10 +886,226 @@ nix repl
 nix-repl> hello = import ./test6.nix
 ```
 
-Soham Chowdhury
+Soham Chowdhury: I'm a little surprised why the hello package has a version 2.12,
+it feels like, what was the breaking change.
 
-18.11 timestamp
+Silvan: So we can look at the url here:
 
+```nix
+nix-repl> hello = import ./test6.nix
 
+nix-repl> hello.src
+«derivation /nix/store/nbsibiddcvm33a6lzb7rlqci1z3051vv-hello-2.12.tar.gz.drv»
 
+nix-repl> hello.src.url
+"mirror://gnu/hello/hello-2.12.tar.gz"
+
+nix-repl> hello.src.urls
+[ "mirror://gnu/hello/hello-2.12.tar.gz" ]
+```
+
+Could be urls, no that's for when you have multiple, what about sha256?
+
+```nix
+nix-repl> hello.src.sha256
+"0000000000000000000000000000000000000000000000000000"
+```
+
+Can we access that, we can access that. That's all zeros. Can we build this? What
+if we build the source derivation?
+
+```nix
+nix-repl> :b hello.src
+error: hash mismatch in fixed-output derivation '/nix/store/nbsibiddcvm33a6lzb7rlqci1z3051vv-hello-2.12.tar.gz.drv':
+         specified: sha256-jZkUKv2SV28wsM18tCqNxoCZmLxdYH2Idh9RLibH2yA=
+            got:    sha256-zwSvhtwIUmjF9EcPuuSbGK+8Iht4CWqrhC2TSna60Ks=
+[0 built (1 failed), 0.0 MiB DL]
+```
+> Note: I seem to get a different ouput for now than what Silvan gets bellow.
+
+We get this tarball. This sounds wrong:
+
+```nix
+nix-repl> :b hello.src
+
+This derivation produced the following outputs:
+  out -> /nix/store/...hello-2.12.tar.gz
+```
+
+Oh I know the problem. I don't think this is valid:
+
+```nix
+src = finalAttrs.src.overrideAttrs (finalAttrs': {
+  sha256 = "0000000000000000000000000000000000000000000000000000";
+});
+```
+
+Because we are overriding the attributes of the final derivation, we aren't
+overriding the attributes of the function call for fetchurl. And so we can look
+at the, we can look at this here:
+
+```nix
+❯ nix repl
+Nix 2.24.11
+Type :? for help.
+nix-repl> hello = import ./test6.nix
+
+nix-repl> hello.src
+«derivation /nix/store/nbsibiddcvm33a6lzb7rlqci1z3051vv-hello-2.12.tar.gz.drv»
+```
+
+Again, I already talked about this at the NixCon. Yuri also knows this well, where
+the nix repl doesn't show the actual derivation attributes by default.
+
+```nix
+nix-repl> hello.src // { type = ""; }
+```
+
+Because derivations have a derivation type in here:
+
+```nix
+nix-repl> hello.src // { type = "derivation"; }
+```
+
+But if we override this to something like an empty string or anything other than
+derivation we can see all the attributes:
+
+```nix
+nix-repl> hello.src // { type = ""; }
+{
+  SSL_CERT_FILE = "/no-cert-file.crt";
+  __ignoreNulls = true;
+  __structuredAttrs = false;
+  all = [ ... ];
+  args = [ ... ];
+  buildInputs = [ ... ];
+  builder = "/nix/store/5mh7kaj2fyv8mk4sfq1brwxgc02884wi-bash-5.2p37/bin/bash";
+  cmakeFlags = [ ... ];
+  configureFlags = [ ... ];
+  # ...
+```
+
+And these are the actual attributes that `.overrideAttrs` overrides, these are
+what get's passed to the derivation builder underneath, and so in here we can
+override the sha256 but that's then just an environment variable. If we actually
+look at the implementation `fetchurl/default.nix`, `sha256` argument is taken
+here somewhere and so it gets turned into a `hash_` and the hash gets turned into
+`outputHash` and this is then the final attribute on the derivation. So we shouldn't
+override the sha256 but this `outputHash` property but that's a bit weird and like
+an implementation detail almost, so I wouldn't recommend this.
+
+Yuriy: Can we override then instead of overrideAttrs?
+
+Silvan: Override? Override on.. I don't think so
+
+Yuriy: Override is produced by callPackage and fetchurl is a function..
+
+Silvan: Yeah, but this would if we use override on fetchurl, we'd override these
+arguments up here:
+
+```nix
+{ lib, buildPackages ? { inherit stdenvNoCC; }, stdenvNoCC
+  , curl # ... }:
+```
+
+These are kind of the dependencies of fetchurl itself.
+
+Yuriy: Not really I think, because..
+
+Silvan: Oh you mean, I see, yeah, let's try it:
+
+```nix
+# ...
+src = finalAttrs.src.override (finalAttrs': {
+  sha256 = "0000000000000000000000000000000000000000000000000000";
+});
+```
+
+Let's try building that:
+
+```nix
+❯ nix-build test7.nix
+error:
+       … while calling the 'derivationStrict' builtin
+         at <nix/derivation-internal.nix>:34:12:
+           33|
+           34|   strict = derivationStrict drvAttrs;
+             |            ^
+           35|
+
+       … while evaluating derivation 'hello-2.12'
+         whose name attribute is located at /nix/store/cxzvgh0g8fknrv9s5r4icihwcyi0yaac-nixos/nixos/pkgs/stdenv/generic/make-derivation.nix:375:7
+
+       … while evaluating attribute 'src' of derivation 'hello-2.12'
+         at /home/stablejoy/code/nix-hour-transcripts/episodes/2/test7.nix:14:13:
+           13|
+           14|             src = finalAttrs.src.override (finalAttrs': {
+             |             ^
+           15|               sha256 = "0000000000000000000000000000000000000000000000000000";
+
+       (stack trace truncated; use '--show-trace' to show the full, detailed trace)
+
+       error: attribute 'override' missing
+       at /home/stablejoy/code/nix-hour-transcripts/episodes/2/test7.nix:14:19:
+           13|
+           14|             src = finalAttrs.src.override (finalAttrs': {
+             |                   ^
+           15|               sha256 = "0000000000000000000000000000000000000000000000000000";
+```
+
+Override missing.
+
+Yuriy: I think we should have this. I think it would be quite useful. When you just
+want to change a version this structure would have been much nicer than having
+to remember to like..
+
+Silvan: That's something to look at definetly, there's lots of improvements
+possible there. I do want to try this as well:
+
+```nix
+src = finalAttrs.src.overrideAttrs (finalAttrs: {
+  outputHash = "0000000000000000000000000000000000000000000000000000";
+});
+```
+
+Not recommended, but just to see if it works. Let's try building that:
+
+```nix
+> nix-build test8.nix
+error: hash '0000000000000000000000000000000000000000000000000000' does not
+include a type, nor is the type otherwise known from context
+```
+
+So with overrideAttrs you have to do this (`outputHash = "00..";`) but that's a
+bit annoying so I think for now this would be the best to go back here.. or let's
+also quickly try out the empty hash here: 
+
+```nix
+#..
+outputHash = "";
+#..
+```
+
+```nix
+> nix-build test9.nix
+ error: empty hash requires explicit hash algorithm
+```
+
+So yeah, that also works, we can see that, well it's gone now, well we saw that
+the nix inferred the kind of all null hash.
+
+Alexander Sosedkin: Do I understand correctly that like in the beginning you have
+said that this new style and old style of writing a derivation for hello when the
+derived attribute is like derived on one level or another level and now we have the
+same problem with fetchurl and we need a new style fetchurl. Is this the correct
+analogy?
+
+Silvan: Yes, it's, fetchurl is a bit separate because it's a function, not a
+derivation, and these functions have like, they're called, so, yes, so that kind
+of new style of finalAttrs here, well let's go to hello..
+
+Alexander Sosedkin: When you override the version on old style hello it doesn't
+propagate to source
+
+23.45 timestamp
 
