2nd overriding sha256

--- a/episodes/2/2.md
+++ b/episodes/2/2.md
@@ -1105,7 +1105,140 @@ derivation, and these functions have like, they're called, so, yes, so that kind
 of new style of finalAttrs here, well let's go to hello..
 
 Alexander Sosedkin: When you override the version on old style hello it doesn't
-propagate to source
+propagate to source, but if you override and `src.url` on an old style fetchurl,
+it doesn't.. if you override sha256 it doesn't propagate the hash. The propagation
+should be like smarter in overrideAttrs with regards to..
 
-23.45 timestamp
+Silvan: Yeah, it's not exactly the same problem because in here the problem was
+that we used the `rec` whereas in the fetchurl the problem is the output here,
+(`outputHash = " 00..";`), the attribute here doesn't correspond to the one we
+want to override and also the override is also not available, but it's a bit
+similar, it kind of looks the same. That's something that we, as part of the
+nix architecture team, that's something that needs to be fixed, it's on the radar,
+this is pretty bad, for now I guess this is the recommendation I'd make.
+
+Yuriy: By the way, if the original derivation had this hash, like on the level
+of the derivation itself, then we could have just overriden it via overrideAttrs
+of that derivation itself right? So like..
+
+Silvan: You mean if we, if the implementation detail would have used the sha256
+attribute.
+
+Yuriy: No, I mean if the hello, if the derivation itself have version, then hash,
+and then src derived from version and hash. Then we could have just overriden it
+but it's not nice repeating stuff.
+
+Silvan: Yeah, yeah, let's see if we had this here, this would work, yeah:
+
+> Note: copies sha256 from `src` after `version`
+
+```nix
+# ~/nixpkgs/pkgs/by-name/he/hello/package.nix
+stdenv.mkDerivation (finalAttrs: {
+  pname = "hello";
+  version = "2.12.1";
+  sha256 = "sha256-jZkUKv2SV28wsM18tCqNxoCZmLxdYH2Idh9RLibH2yA=";
+  
+  src = fetchurl {
+    url = "mirror://gnu/hello/hello-${finalAttrs.version}.tar.gz";
+    hash = "sha256-jZkUKv2SV28wsM18tCqNxoCZmLxdYH2Idh9RLibH2yA=";
+  };
+```
+
+I guess let's try it out, maybe someone would be interested in doing this for
+like, I'm not sure if it would be accepted in nixpkgs, but at least for now like
+this, this looks pretty good actually:
+
+```nix
+# ~/nixpkgs/pkgs/by-name/he/hello/package.nix
+stdenv.mkDerivation (finalAttrs: {
+  pname = "hello";
+  version = "2.12.1";
+  sha256 = "sha256-jZkUKv2SV28wsM18tCqNxoCZmLxdYH2Idh9RLibH2yA=";
+  
+  src = fetchurl {
+    url = "mirror://gnu/hello/hello-${finalAttrs.version}.tar.gz";
+    hash = finalAttrs.sha256;
+  };
+```
+
+So not possible for most derivations right now but let's see here, let's try to
+build this:
+
+```nix
+# test.10.nix
+let 
+  pkgs = import <nixpkgs> {
+    overlays = [
+      (final: prev: {
+        hello = (prev.hello.override {
+          #fetchurl = throw "not fetchurl";
+        }).overrideAttrs (finalAttrs: {
+            version = "2.12";
+            sha256 = "";
+
+            #src = final.fetchurl {
+            #url = finalAttrs.src.url;
+            #hash = "sha256-jzkukv2sv28wsm18tcqnxoczmlxdyh2idh9rlibh2ya=";
+            #};
+
+            src = finalAttrs.src.overrideAttrs (finalAttrs': {
+              outputHash = "";
+            });
+
+          nativebuildinputs = (finalAttrs.nativebuildinputs or []) ++ [
+            final.jq
+          ];
+        });
+      })
+    ];
+  };
+in pkgs.hello
+```
+
+Yuriy: ..nixpkgs, import.
+
+Silvan: What I should do?
+
+Yuriy: Import nixpkgs from the outside, from what you changed.
+
+Silvan: Oh, yeah, good point. Let's import the local nixpkgs, (`pkgs = import ./.`):
+
+> Note: I used the absolute path to my nixpkgs source directory, which may mean
+Silvan was building test.nix in the nixpkgs directory itself?
+
+```nix
+let 
+  pkgs = import ./. {
+    overlays = [
+      (final: prev: {
+        hello = (prev.hello.override {
+          #fetchurl = throw "not fetchurl";
+        }).overrideAttrs (finalAttrs: {
+            version = "2.12";
+            sha256 = "";
+
+            #src = final.fetchurl {
+            #url = finalAttrs.src.url;
+            #hash = "sha256-jzkukv2sv28wsm18tcqnxoczmlxdyh2idh9rlibh2ya=";
+            #};
+
+            # Not working
+            # src = finalAttrs.src.overrideAttrs (finalAttrs': {
+            #  outputHash = "";
+            #});
+
+          nativebuildinputs = (finalAttrs.nativebuildinputs or []) ++ [
+            final.jq
+          ];
+        });
+      })
+    ];
+  };
+in pkgs.hello
+```
+
+Okay, that worked.
+ 26.48 timestamp
+
 
